// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDUtils.proc "HTML: NOTE_REF_RECURSIVE_WITH_REHYPE" 1`] = `
"<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">One</span></div>
<a href=\\"foo.one-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><h1 id=\\"fooone\\">Foo.One</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Two</span></div>
<a href=\\"foo.two\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><h1 id=\\"footwo\\">Foo.Two</h1>
<p>blah</p>
</div></div><p></p>
Regular wikilink: <a href=\\"foo.two\\">Two</a><p></p>
</div></div><p></p><p></p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.one-id\\">One</a></li>
<li><a href=\\"foo.two\\">Two</a></li>
</ol>"
`;

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE": respProcess 1`] = `
"<h1 id=\\"foo\\">Foo</h1>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Foo</span></div>
<a href=\\"foo-id\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p><a href=\\"bar\\">Bar</a></p>
</div></div><p></p><p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>"
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES" 1`] = `
"<h1 id=\\"foo\\">Foo</h1>
<p>Here is a footnote reference,<a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>
<h2 id=\\"footnotes\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>Here is the footnote.<a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
</ol>"
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK" 1`] = `
"<h1 id=\\"foo\\">Foo</h1>
<p><a href=\\"foo.ch1\\">Ch1</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"foo.ch1\\">Ch1</a></li>
</ol>"
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK" 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[[foo.ch1]]

"
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK" 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Ch1](foo.ch1.md)

"
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK_X_VAULT" 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Bar](../vault2/bar.md)

"
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK" 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Ch1](foo.ch1)

"
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK_X_VAULT" 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Bar](bar)

"
`;
